output.log
  File "bot.py", line 104
    await save_file.save(file_name)
    ^
SyntaxError: 'await' outside async function
Ignoring exception in on_message
Traceback (most recent call last):
  File "/home/finn/.local/lib/python3.7/site-packages/discord/client.py", line 312, in _run_event
    await coro(*args, **kwargs)
  File "bot.py", line 200, in on_message
    if json_message["external"]:
KeyError: 'external'
Ignoring exception in on_message
Traceback (most recent call last):
  File "/home/finn/.local/lib/python3.7/site-packages/discord/client.py", line 312, in _run_event
    await coro(*args, **kwargs)
  File "bot.py", line 200, in on_message
    if json_message["external"]:
KeyError: 'external'
Connected to Discord!
Connected to Discord!
